<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        >

        <ImageView
            android:id="@+id/img_baby_bg"
            android:layout_width="@dimen/margin_160"
            android:layout_height="@dimen/margin_160"
            android:layout_gravity="center"
            android:background="@drawable/main_top_center"
            android:padding="5dp"
            />

        <com.wsq.ebottle.widget.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/img_tou"
            android:layout_width="@dimen/margin_150"
            android:layout_height="@dimen/margin_150"
            android:layout_gravity="center"
            android:padding="5dp"
             />
    </FrameLayout>
    
    <!-- 设备编号 -->
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/margin_10"
        android:gravity="center_vertical"
        >
         <TextView
	        android:id="@+id/textView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/device_id"
	        android:textSize="@dimen/text_size_22"
	        android:textColor="@color/brown"
         />
         <View 
             android:layout_width="0dp"
             android:layout_height="1dp"
             android:layout_weight="1"
             android:background="@color/brown"
             />       
    </LinearLayout>
    
    <!-- 奶瓶编号 -->
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/margin_15"
        android:layout_marginTop="@dimen/margin_5"
        android:gravity="center_vertical"
        >
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nurse_bottle_id"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16"
            />
        <EditText 
            android:id="@+id/edit_nurse_bottle_id"
            android:layout_width="@dimen/margin_180"
            android:layout_height="@dimen/margin_25"
            android:background="@drawable/edit_bg"
            android:padding="3dp"
            android:textColor="@color/black"
            android:hint="@string/hint_tip1"
            android:textSize="@dimen/text_size_14"
            android:editable="false" 
            />
    </LinearLayout>
   <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/margin_15"
        android:paddingTop="@dimen/margin_15"
        >
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/water_bottle_id"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16"
            />
         <EditText 
            android:id="@+id/edit_water_bottle_id"
            android:layout_width="@dimen/margin_180"
            android:layout_height="@dimen/margin_25"
            android:background="@drawable/edit_bg"
            android:padding="3dp"
            android:textColor="@color/black"
            android:hint="@string/hint_tip2"
            android:textSize="@dimen/text_size_14"
            android:editable="false" 
            />
    </LinearLayout>
   
   <!-- 宝贝资料 -->
   <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/margin_10"
        android:gravity="center_vertical"
        >
         <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/baby_data"
	        android:textSize="@dimen/text_size_22"
	        android:textColor="@color/brown"
         />
         <View 
             android:layout_width="0dp"
             android:layout_height="1dp"
             android:layout_weight="1"
             android:background="@color/brown"
             />       
    </LinearLayout>
   
   <!-- 宝贝姓名 -->
   <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/margin_15"
        android:layout_marginTop="@dimen/margin_5"
        android:gravity="center_vertical"
        >
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/baby_name"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16"
            />
        <com.wsq.ebottle.widget.EditTextWithDel
            android:id="@+id/edit_baby_name"
            android:layout_width="@dimen/margin_90"
            android:layout_height="@dimen/margin_25"
            android:background="@drawable/edit_bg"
            android:padding="3dp"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_14" 
            android:singleLine="true"
            android:maxLength="16"
            />
        
        <RadioGroup 
            android:id="@+id/radio_group_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/margin_10"
            android:gravity="center_vertical"
            >
        
	        <RadioButton 
	            android:id="@+id/radio_male"
	            android:layout_width="@dimen/margin_20"
	            android:layout_height="@dimen/margin_20"
	            android:button="@null"
	            android:background="@drawable/sex_selector"
	            />
	        <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/male"
	            android:textColor="@color/black"
	            android:textSize="@dimen/text_size_12"
	            android:layout_marginLeft="@dimen/margin_5"
            />
	        
	        <RadioButton 
	            android:id="@+id/radio_female"
	            android:layout_width="@dimen/margin_20"
	            android:layout_height="@dimen/margin_20"
	            android:button="@null"
	            android:background="@drawable/sex_selector"
	            android:layout_marginLeft="@dimen/margin_5"
	            />
	        <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/female"
	            android:textColor="@color/black"
	            android:textSize="@dimen/text_size_12"
	            android:layout_marginLeft="@dimen/margin_5"
            />
        </RadioGroup>
        
    </LinearLayout>
    <!-- 出生日期 -->
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/margin_15"
        android:layout_marginTop="@dimen/margin_10"
        android:gravity="center_vertical"
        >
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/baby_birth"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16"
            />
        <com.wsq.ebottle.widget.EditTextWithDel
            android:id="@+id/edit_baby_birth"
            android:layout_width="@dimen/margin_180"
            android:layout_height="@dimen/margin_25"
            android:background="@drawable/edit_bg"
            android:padding="3dp"
            android:textColor="@color/black"
            android:hint="@string/hint_tip3"
            android:textSize="@dimen/text_size_14"
            android:editable="false" 
            android:focusable="true"
            />
    </LinearLayout>
    <!-- 宝宝重量 -->
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/margin_15"
        android:layout_marginTop="@dimen/margin_10"
        android:gravity="center_vertical"
        >
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/baby_weight"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16"
            />
        <com.wsq.ebottle.widget.EditTextWithDel
            android:id="@+id/edit_baby_weight"
            android:layout_width="@dimen/margin_180"
            android:layout_height="@dimen/margin_25"
            android:background="@drawable/edit_bg"
            android:padding="3dp"
            android:textColor="@color/black"
            android:hint="@string/hint_tip4"
            android:textSize="@dimen/text_size_14"
            android:numeric="integer"
            />
    </LinearLayout>
   
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_20"
        >
        <Button 
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_baby_data"
            android:textSize="@dimen/text_size_16"
            android:textColor="@color/black"
            android:background="@null"
            android:drawableLeft="@drawable/icon_add"
            android:drawablePadding="5dp"
            />
    </LinearLayout>
        
</LinearLayout>