<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center" 
    >

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:minWidth="200dp"
        android:orientation="vertical"
        android:scrollbars="vertical" >

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/prompt"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:minHeight="40dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/exit_app"
                android:textColor="@android:color/black"
                android:textSize="14sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="@color/red" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="30dp"
            android:orientation="horizontal"
            
             >

            <Button
                android:id="@+id/cancel_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/left_btn_select"
                android:text="@string/cancel"
                android:textSize="16sp"
                android:textColor="@color/black" />
            
            <LinearLayout
                android:id="@+id/second_line"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/red"
                android:orientation="horizontal" />

            <Button
                android:id="@+id/confirm_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/right_btn_select"
                android:text="@string/confirm"
                android:textSize="16sp"
                android:textColor="@color/black" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>