<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/bg"
    >
    <include 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        layout="@layout/top2"/>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margin_10"
        >
	    <RelativeLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="@dimen/margin_20"
	        >
	        
	        <TextView 
	            android:id="@+id/txt_date"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text=""
	            android:textColor="@color/black"
	            android:textSize="@dimen/text_size_16"
	            android:layout_alignParentLeft="true"
	            android:layout_marginLeft="@dimen/margin_10"
	            />
	        
	        <TextView 
	            android:id="@+id/txt_week"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text=""
	            android:textColor="@color/black"
	            android:textSize="@dimen/text_size_16"
	            android:layout_centerHorizontal="true"
	            />
	        <TextView 
	            android:id="@+id/txt_time"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="00:00"
	            android:textColor="@color/black"
	            android:textSize="@dimen/text_size_16"
	            android:layout_alignParentRight="true"
	            android:layout_marginRight="@dimen/margin_20"
	            />
	    </RelativeLayout>
   
    <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_5"
        android:layout_marginTop="@dimen/margin_20"
        >
       <LinearLayout 
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentLeft="true"
           android:orientation="horizontal"
           android:gravity="center_vertical"
           >
         <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/weight"
	            android:textColor="@color/black"
	            android:textSize="@dimen/text_size_16"
	            android:layout_alignParentRight="true"
	            />
         <EditText 
             android:id="@+id/edit_weight"
             android:layout_width="@dimen/margin_100"
             android:layout_height="wrap_content"
             android:textColor="@color/black"
             android:textSize="@dimen/text_size_14"
             android:padding="@dimen/margin_5"
             android:background="@drawable/edit_bg"
             android:layout_marginLeft="@dimen/margin_5"
             android:hint="@string/hint_tip4"
             android:numeric="integer"
             
             /> 
       </LinearLayout> 
        <LinearLayout 
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentRight="true"
           android:orientation="horizontal"
           android:gravity="center_vertical"
           >
         <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/mood"
	            android:textColor="@color/black"
	            android:textSize="@dimen/text_size_16"
	            android:layout_alignParentRight="true"
	            />
         <EditText 
             android:id="@+id/edit_mood"
             android:layout_width="@dimen/margin_100"
             android:layout_height="wrap_content"
             android:textColor="@color/black"
             android:textSize="@dimen/text_size_14"
             android:padding="@dimen/margin_5"
             android:background="@drawable/edit_bg"
             android:layout_marginLeft="@dimen/margin_5"
             android:hint="@string/hint_tip5"
             /> 
       </LinearLayout> 
     </RelativeLayout>
     <LinearLayout 
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_marginTop="@dimen/margin_10"
         >
         <EditText 
             android:id="@+id/edit_diary_content"
             android:layout_width="fill_parent"
             android:layout_height="@dimen/margin_200"
             android:textColor="@color/black"
             android:textSize="@dimen/text_size_14"
             android:padding="@dimen/margin_5"
             android:background="@drawable/edit_bg"
             android:layout_marginLeft="@dimen/margin_5"
             android:singleLine="false"
             android:inputType="textMultiLine"
             android:gravity="top"
             /> 
     </LinearLayout> 
    
   </LinearLayout>
</LinearLayout>
